--- a/style.css
+++ b/style.css
@@ -69,6 +69,40 @@ left: 212px;
     left: 734px;
     margin-bottom: 1rem;
     line-height: 32.81px;
+
+  }
+  .vector{
+width: 22px;
+ height: 14px;
+ top: 208px;
+ left: 744px;
+ float:left;
+ align-items: center;
+justify-content: center;
+  }
+  .retangulo {
+    width: 481px;
+    height: 52px;;
+    top: 189px;
+    left: 731px;
+    border-radius: 20px;
+    border: 1px;
+    border: 1px solid #00000040
+  }
+  .centralizar {
+  font-family: 'Roboto';
+  font-size: 27px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0em;
+  text-align: center;
+  }
+  .options-list {
+    width: 324px;
+    height: 211px;
+    top: 329px;
+    left: 771px
+    
   }
   .btn {
     padding: 0.3rem 3rem;
@@ -86,16 +120,42 @@ left: 212px;
   height: 36px;
   top: 571px;
   left: 960px;
-  border-radius: 35px;
+  border-radius: 39px;
   background: #3EB25E;
   color: white;
-  padding: 0.3rem 3rem;
+  padding: 0.45rem 3rem;
   border-radius: 50px;
   border: none;
-  font-size: 20px;
-  cursor: pointer;
+   cursor: pointer;
   transition: all 0.3s ease;
   outline: none;
+  }
+
+.colocarbaixo {
+position:relative;
+width: 418px; 
+ height: 36px;
+background: #3EB25E;
+border-radius: 35px;
+position: absolute;
+width: 38vh;
+height: 20px;
+padding: 0px 20px;
+font-size: 16px;
+display: flex;
+align-items: center;
+justify-content: center;
+height: 4vh;
+margin: 10px;
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 22px;
+line-height: 26px;
+text-align: center; 
+
+color: #FFFFFF;
+
   }
   
   @media (width <= 768px) {
